ingress/mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
spec:
  rules:
    - host: alireza-feyzabadi-nl-rg3.maxtld.dev
      http:
        paths:
          - path: /wordpress
            pathType: Prefix
            backend:
              service:
                name: mysql-service
                port: 
                  number: 80
