ingress/phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
spec:
  rules:
    - host: alireza-feyzabadi-nl-rg3.maxtld.dev
      http:
        paths:
          - path: /dbadmin
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
